# AstroPSU-Pico

./: .gitmodules  AstroPSU-Pico.cpp  AstroPSU-Pico.h  CMakeLists.txt  README.md
pico-bmi160/lib/: CMakeLists.txt  bmi160.cpp
pico-bmi160/lib/include/: bmi160.h
pico-oldi2c/lib/: CMakeLists.txt  oldi2c.cpp
pico-oldi2c/lib/include/: oldi2c.h
pico-sht3x/lib/: CMakeLists.txt  sht3x.cpp
pico-sht3x/lib/include/: sht3x.h
